added read me and requirments list also modified

--- a/README
+++ b/README
@@ -1,3 +1,33 @@
-Hhello
-test
-jjjjj
+
+# Flask Login Project
+
+This project is a Flask-based web application that implements user authentication and login functionality.
+
+## Installation
+
+1. Clone the repository.
+2. Install the required dependencies by running the following command:
+   ```bash
+   pip install -r requirements.txt
+   ```
+3. Set up the database by running apache server in xampp:
+   ```bash
+   python manage.py db upgrade
+   ```
+4. Start the application by running the python file: web-script.py
+
+
+## Usage
+
+1. Open your web browser and navigate to `http://localhost:5000/login`.
+2. Register a new user account or log in with an existing account.
+3. Explore the different features of the application.
+
+## Dependencies
+
+- Flask
+- Flask-Login
+- SQLAlchemy
+- WTForms
+- etc.
+
